@@ -10,47 +10,42 @@ use ArrayHash;
 
 my ($b, %hash, @array);
 
-sub make-iter(Array(Positional) $o) {
-    class {
-        method CALL-ME() { $o.shift }
-        method AT-POS($pos) { $o[$pos] }
-    }
-}
-
 my %inits =
-    '01-init-hash-then-array' => {
-        $b      = 2;
-        note "b: ", $b.VAR.WHICH;
-        %hash  := array-hash('a' => $=1, 'b' => $b, 'c' => $=3);
+    '01-init-array-hash' => {
+        %hash  := array-hash('a' => 1, 'b' => 2, 'c' => 3);
         @array := %hash;
-        make-iter(@ = 0, 1, 2);
     },
-    '02-init-array-then-hash' => {
-        $b      = 2;
-        @array := array-hash('a' => $=1, 'b' => $b, 'c' => $=3);
-        %hash  := @array;
-        make-iter(@ = 0, 1, 2);
+    '02-init-array-hash-list-pairs' => {
+        %hash := array-hash(
+            (a => 1, b => 2, c => 3)
+        );
+        @array := %hash;
     },
-    '03-init-from-kv-and-pair' => {
-        $b = 2;
-        # TODO Figure out my original intention here and either do that or
-        # delete these init. I believe I meant for this to be:
-        #
-        #     my $init = array-hash(a => 1, :$b, c => 3);
-        #
-        # That causes test fails at the mo', so I'm leaving it like this for
-        # now.
-        my $init = array-hash('a', 1, 'b' => $b, 'c', 3);
-        @array := $init;
-        %hash  := $init;
-        make-iter(($init.values »-» 1).antipairs.sort».value);
+    '03-init-array-hash-items' => {
+        %hash  := array-hash('a', 1, 'b', 2, 'c', 3);
+        @array := %hash;
     },
-    '04-init-from-kv' => {
-        $b = 2;
-        my $init = array-hash('a', 1, 'b', $b, 'c', 3);
-        @array := $init;
-        %hash  := $init;
-        make-iter(($init.values »-» 1).antipairs.sort».value);
+    '04-init-array-hash-mixed' => {
+        %hash  := array-hash('a', 1, 'b' => 2, 'c', 3);
+        @array := %hash;
+    },
+    '05-init-ArrayHash-new' => {
+        %hash  := array-hash('a' => 1, 'b' => 2, 'c' => 3);
+        @array := %hash;
+    },
+    '06-init-ArrayHash-new-list-pairs' => {
+        %hash := array-hash(
+            (a => 1, b => 2, c => 3)
+        );
+        @array := %hash;
+    },
+    '07-init-ArrayHash-new-items' => {
+        %hash  := array-hash('a', 1, 'b', 2, 'c', 3);
+        @array := %hash;
+    },
+    '08-init-ArrayHash-new-mixed' => {
+        %hash  := array-hash('a', 1, 'b' => 2, 'c', 3);
+        @array := %hash;
     },
 ;
 
@@ -60,17 +55,17 @@ my %tests =
         is %hash<b>, 2, 'hash b';
         is %hash<c>, 3, 'hash c';
 
-        is @array[.[0]].key, 'a', 'array 0 key';
-        is @array[.[0]].value, 1, 'array 0 value';
-        is @array[.[1]].key, 'b', 'array 1 key';
-        is @array[.[1]].value, 2, 'array 1 value';
-        is @array[.[2]].key, 'c', 'array 2 key';
-        is @array[.[2]].value, 3, 'array 2 value';
+        is @array[0].key, 'a', 'array 0 key';
+        is @array[0].value, 1, 'array 0 value';
+        is @array[1].key, 'b', 'array 1 key';
+        is @array[1].value, 2, 'array 1 value';
+        is @array[2].key, 'c', 'array 2 key';
+        is @array[2].value, 3, 'array 2 value';
     },
     '02-replace-hash' => {
         %hash<a> = 4;
         is %hash<a>, 4, 'hash a replaced';
-        is @array[.()].value, 4, 'array 0 value replaced';
+        is @array[0].value, 4, 'array 0 value replaced';
     },
     '03-append-hash' => {
         %hash<d> = 5;
@@ -79,72 +74,69 @@ my %tests =
         is @array[3].value, 5, 'array d value added';
     },
     '04-replace-array' => {
-        @array[.[1]] = 'e' => 6;
-        is %hash{'b'}, Any, 'hash b removed';
-        is %hash{'e'}, 6, 'hash e added';
+        @array[1] = 'e' => 6;
+        is %hash<b>, Any, 'hash b removed';
+        is %hash<e>, 6, 'hash e added';
     },
-    '05-change-init-bound-var' => {
-        $b = 7;
-        is %hash<b>, 7, 'hash b modified';
-        is @array[.[1]].value, 7, 'array b value modified';
-    },
-    '06-delete-hash-squashes-blanks' => {
+    '06-delete-hash-keeps-blanks' => {
         %hash<b> :delete;
-        is @array.elems, 2, 'after hash delete elems == 2';
+        ok @array[1] ~~ Pair:U, 'after hash delete array 1 is deleted';
+        is @array.elems, 3, 'after hash delete elems == 2';
     },
     '07-delete-array-keeps-blanks' => {
         @array[1] :delete;
+        ok %hash<b>:!exists, 'after array delete hash b is deleted';
         is %hash.elems, 3, 'after array delete elems still == 3';
     },
-    '08-perl' => {
+    '08-raku' => {
         todo 'It would be best if this passed.', 2;
         my @els = q[:a(1)], q[:b(2)], q[:c(3)];
-        is @array.perl, q[array-hash(] ~ @els[.[0], .[1], .[2]].join(', ') ~ q[)], "array.perl";
-        is %hash.perl, q[array-hash(] ~ @els[.[0], .[1], .[2]].join(', ') ~ q[)], "hash.perl";
+        is @array.raku, q[array-hash(] ~ @els[0, 1, 2].join(', ') ~ q[)], "array.raku";
+        is %hash.perl, q[array-hash(] ~ @els[0, 1, 2].join(', ') ~ q[)], "hash.raku";
     },
     '09-replace-earlier' => {
         @array[3] = 'b' => 8;
         is %hash<b>, 8, 'hash b changed';
-        ok @array[.[1]] ~~ Pair:U, 'array 1 nullified';
+        ok @array[1] ~~ Pair:U, 'array 1 nullified';
     },
     '10-replace-later' => {
-        if (.[1] == 0) {
-            @array[0] = 'b' => 9;
-            is %hash<b>, 9, 'hash b is changed';
-            is @array[0].key, 'b', 'array 0 key same';
-            is @array[0].value, 9, 'array 0 value changed';
-        }
-        else {
-            @array[0] = 'b' => 9;
-            is %hash<b>, $b, 'hash b is unchanged';
-            ok @array[0] ~~ Pair:U, 'array 0 nullified';
-        }
+        @array[0] = 'b' => 9;
+        is %hash<b>, 2, 'hash b is same';;
+        ok @array[0] ~~ Pair:U, 'array 0 is nullified';
+        is @array[1].key, 'b', 'array 1 key is same';
+        is @array[1].value, 2, 'array 1 value is same';
     },
     '11-bind-replace-earlier' => {
-        @array[3] := 'b' => 8;
-        is %hash<b>, 8, 'hash b changed';
-        ok @array[.[1]] ~~ Pair:U, 'array 1 nullified';
+        @array[3] := :$b;
+        is %hash<b>, 42, 'hash b changed';
+        ok @array[1] ~~ Pair:U, 'array 1 nullified';
+        is @array[3].key, 'b', 'array 3 key is b';
+        is @array[3].value, 42, 'array 3 value is 42';
+        $b = 24;
+        is %hash<b>, 24, 'hash b changed';
+        ok @array[1] ~~ Pair:U, 'array 1 nullified';
+        is @array[3].key, 'b', 'array 3 key is b';
+        is @array[3].value, 24, 'array 3 value is 24';
     },
     '12-bind-replace-later' => {
-        if (.[1] == 0) {
-            @array[0] := 'b' => 9;
-            is %hash<b>, 9, 'hash b is changed';
-            is @array[0].key, 'b', 'array 0 key same';
-            is @array[0].value, 9, 'array 0 value changed';
-        }
-        else {
-            @array[0] := 'b' => 9;
-            is %hash<b>, 2, 'hash b is unchanged';
-            ok @array[0] ~~ Pair:U, 'array 0 nullified';
-        }
+        @array[0] := :$b;
+        is %hash<b>, 2, 'hash b is unchanged';
+        ok @array[0] ~~ Pair:U, 'array 0 key nullified';
+        is @array[1].key, 'b', 'array 1 key is same';
+        is @array[1].value, 2, 'array 1 value is same';
+        $b = 24;
+        is %hash<b>, 2, 'hash b is unchanged';
+        ok @array[0] ~~ Pair:U, 'array 0 key same';
+        is @array[1].key, 'b', 'array 1 key is same';
+        is @array[1].value, 2, 'array 1 value is same';
     },
     '13-bind-key' => {
         %hash<a> := $b;
+        is %hash<a>, $b, 'hash a matches $b';
+        is @array[0].value, $b, 'array 0 value matches $b';
         $b = 10;
-        is %hash<a>, $b, 'hash a changed';
-        is %hash<b>, $b, 'hash b changed too';
-        is @array[.[0]].value, $b, 'array 0 value changed';
-        is @array[.[1]].value, $b, 'array 1 value changed';
+        is %hash<a>, $b, 'hash a still matches $b';
+        is @array[0].value, $b, 'array 0 value still matches $b';
     },
     '14-exists-key' => {
         ok %hash<a> :exists, 'yep a exists';
@@ -160,72 +152,61 @@ my %tests =
     },
     '16-delete-key' => {
         my $v = %hash<b> :delete;
-        is $v, $b, 'deleted value is correct';
-        is %hash.elems, 2, 'deleted hash shrunk by one elem';
-        is @array.elems, 2, 'delete array shrunk by one elem too';
+        is $v, 2, 'deleted value is correct';
+        ok %hash<b>:!exists, 'deleted hash value is gone';
+        ok @array[1] ~~ Pair:U, 'deleted pair is gone';
+        is %hash.elems, 3, 'deleted hash is the same size';
+        is @array.elems, 3, 'delete array is the same size';
     },
     '17-delete-pos' => {
-        my $p = @array[.[1]] :delete;
+        my $p = @array[1] :delete;
         is $p.key, 'b', 'deleted key is b';
-        is $p.value, $b, 'deleted value is $b';
-        if .[1] == 2 {
-            is %hash.elems, 2, 'deleted hash shrunk by one elem';
-            is @array.elems, 2, 'deleted array shrunk by one elem too';
-        }
-        else {
-            is %hash.elems, 3, 'deleted hash did not shrink';
-            is @array.elems, 3, 'deleted array did not shrink';
-        }
-        is @array[.[1]], Pair, 'deleted array position is undef';
+        is $p.value, 2, 'deleted value is 2';
+        is %hash.elems, 3, 'deleted hash did not shrink';
+        is @array.elems, 3, 'deleted array did not shrink';
+        ok @array[1] ~~ Pair:U, 'deleted array position is undef';
     },
     '18-push' => {
-        @array.push: d => 11, 'e' => 12, b => 13, 'c' => 14;
+        @array.push: 'd' => 11, 'e' => 12, 'b' => 13, 'c' => 14;
         is %hash<a>, 1, 'hash a same';
         is %hash<b>, 13, 'hash b changed';
         is %hash<c>, 14, 'hash c changed';
         is %hash<d>, 11, 'hash d added';
         is %hash<e>, 12, 'hash e added';
 
-        is @array[.[0]].key, 'a', 'array 0 key same';
-        is @array[.[0]].value, 1, 'array 0 value same';
-        is @array[.[1]].key, 'b', 'array 1 key same';
-        is @array[.[1]].value, 13, 'array 1 value changed';
-        is @array[.[2]], Pair, 'array 2 nullified';
-
-        my %remains = c => 14, d => 11, e => 12;
-        for 3 .. 5 -> $i {
-            my $p = @array[$i];
-            my $v = %remains{ $p.key } :delete;
-            is $v, $p.value, 'got an expected value';
-        }
+        is @array[0].key, 'a', 'array 0 key same';
+        is @array[0].value, 1, 'array 0 value same';
+        ok @array[1] ~~ Pair:U, 'array 1 nullified';
+        ok @array[2] ~~ Pair:U, 'array 2 nullified';
+        is @array[3].key, 'd', 'array 3 key is d';
+        is @array[3].value, 11, 'array 3 value is 11';
+        is @array[4].key, 'e', 'array 4 key is e';
+        is @array[4].value, 12, 'array 4 value is 12';
+        is @array[5].key, 'b', 'array 5 key is b';
+        is @array[5].value, 13, 'array 5 value is 13';
+        is @array[6].key, 'c', 'array 6 key is c';
+        is @array[6].value, 14, 'array 6 value is 14';
     },
     '19-unshift' => {
         @array.unshift: 'd', 11, 'e' => 12, 'b', 13, 'c' => 14;
         is %hash<a>, 1, 'hash a same';
-        is %hash<b>, $b, 'hash b same';
+        is %hash<b>, 2, 'hash b same';
         is %hash<c>, 3, 'hash c same';
         is %hash<d>, 11, 'hash d added';
         is %hash<e>, 12, 'hash e added';
 
-        my $blanks = 1;
-        my %remains = d => 11, e => 12;
-        for 0 .. 2 -> $i {
-            my $p = @array[$i];
-            if !$p.defined {
-                ok $blanks-- > 0, 'blank added';
-            }
-            else {
-                my $v = %remains{ $p.key } :delete;
-                is $v, $p.value, 'got an expected value';
-            }
-        }
-
-        is @array[.[0] + 4].key, 'a', 'array 0 + 2 key same';
-        is @array[.[0] + 4].value, 1, 'array 0 + 2 value same';
-        is @array[.[1] + 4].key, 'b', 'array 1 + 2 key same';
-        is @array[.[1] + 4].value, $b, 'array 1 + 2 value same';
-        is @array[.[2] + 4].key, 'c', 'array 2 + 2 key same';
-        is @array[.[2] + 4].value, 3, 'array 2 + 2 value same';
+        is @array[0].key, 'd', 'array 0 key is d';
+        is @array[0].value, 11, 'array 0 value is 11';
+        is @array[1].key, 'e', 'array 1 key is e';
+        is @array[1].value, 12, 'array 1 value is 12';
+        ok @array[2] ~~ Pair:U, 'array 2 is nullified';
+        ok @array[3] ~~ Pair:U, 'array 3 is nullified';
+        is @array[4].key, 'a', 'array 4 key same';
+        is @array[4].value, 1, 'array 4 value same';
+        is @array[5].key, 'b', 'array 5 key same';
+        is @array[5].value, 2, 'array 5 value same';
+        is @array[6].key, 'c', 'array 6 key same';
+        is @array[6].value, 3, 'array 6 value same';
     },
     '20-splice-push' => {
         @array.splice: 3, 0, 'd' => 11, 'e', 12, 'b', 13, 'c' => 14;
@@ -235,197 +216,95 @@ my %tests =
         is %hash<d>, 11, 'hash d added';
         is %hash<e>, 12, 'hash e added';
 
-        is @array[.[0]].key, 'a', 'array 0 key same';
-        is @array[.[0]].value, 1, 'array 0 value same';
-        is @array[.[1]], Pair, 'array 1 nullified';
-        is @array[.[2]], Pair, 'array 2 nullified';
-
-        my %remains = b => 13, c => 14, d => 11, e => 12;
-        for 3 .. 6 -> $i {
-            my $p = @array[$i];
-            my $v = %remains{ $p.key } :delete;
-            is $v, $p.value, 'got an expected value';
-        }
+        is @array[0].key, 'a', 'array 0 key same';
+        is @array[0].value, 1, 'array 0 value same';
+        ok @array[1] ~~ Pair:U, 'array 1 nullified';
+        ok @array[2] ~~ Pair:U, 'array 2 nullified';
+        is @array[3].key, 'd', 'array 3 key is d';
+        is @array[3].value, 11, 'array 3 value is 11';
+        is @array[4].key, 'e', 'array 4 key is e';
+        is @array[4].value, 12, 'array 4 value is 12';
+        is @array[5].key, 'b', 'array 5 key is b';
+        is @array[5].value, 13, 'array 5 value is 13';
+        is @array[6].key, 'c', 'array 6 key is c';
+        is @array[6].value, 14, 'array 6 value is 14';
     },
     '21-splice-unshift' => {
         @array.splice: 0, 0, 'd', 11, 'e', 12, 'b' => 13, 'c' => 14;
+
         is %hash<a>, 1, 'hash a same';
-        is %hash<b>, $b, 'hash b same';
+        is %hash<b>, 2, 'hash b same';
         is %hash<c>, 3, 'hash c same';
         is %hash<d>, 11, 'hash d added';
         is %hash<e>, 12, 'hash e added';
 
-        my $blanks = 2;
-        my %remains = d => 11, e => 12;
-        for 0 .. 3 -> $i {
-            my $p = @array[$i];
-            if !$p.defined {
-                ok $blanks-- > 0, 'blank added';
-            }
-            else {
-                my $v = %remains{ $p.key } :delete;
-                is $v, $p.value, 'got an expected value';
-            }
-        }
-
-        is @array[.[0] + 4].key, 'a', 'array 0 + 2 key same';
-        is @array[.[0] + 4].value, 1, 'array 0 + 2 value same';
-        is @array[.[1] + 4].key, 'b', 'array 1 + 2 key same';
-        is @array[.[1] + 4].value, $b, 'array 1 + 2 value same';
-        is @array[.[2] + 4].key, 'c', 'array 2 + 2 key same';
-        is @array[.[2] + 4].value, 3, 'array 2 + 2 value same';
+        is @array[0].key, 'd', 'array 0 key is d';
+        is @array[0].value, 11, 'array 0 value is 11';
+        is @array[1].key, 'e', 'array 1 key is e';
+        is @array[1].value, 12, 'array 1 value is 12';
+        ok @array[2] ~~ Pair:U, 'array 2 is nullified';
+        ok @array[3] ~~ Pair:U, 'array 3 is nullified';
+        is @array[4].key, 'a', 'array 4 key same';
+        is @array[4].value, 1, 'array 4 value same';
+        is @array[5].key, 'b', 'array 5 key same';
+        is @array[5].value, 2, 'array 5 value same';
+        is @array[6].key, 'c', 'array 6 key same';
+        is @array[6].value, 3, 'array 6 value same';
     },
     '22-splice-insert' => {
-        @array.splice: 2, 0, d => 11, 'e' => 12, b => 13, 'c' => 14;
-
-        my @orig = (.[0], .[1], .[2]).map({
-            when * >= 2 { $_ + 4 }
-            default     { $_ }
-        });
+        @array.splice: 2, 0, 'd' => 11, 'e' => 12, 'b' => 13, 'c' => 14;
 
         is %hash<a>, 1, 'hash a same';
-        if (@orig[1] >= 2) {
-            is %hash<b>, $b, 'hash b same';
-        }
-        else {
-            is %hash<b>, 13, 'hash b changed';
-        }
-        if (@orig[2] >= 2) {
-            is %hash<c>, 3, 'hash c same';
-        }
-        else {
-            is %hash<c>, 14, 'hash c changed';
-        }
+        is %hash<b>, 13, 'hash b changed';
+        is %hash<c>, 3, 'hash c same';
         is %hash<d>, 11, 'hash d added';
         is %hash<e>, 12, 'hash e added';
 
-        my $blanks = 1;
-        my %remains = d => 11, e => 12;
-        %remains<b> = 13 if @orig[1] < 2;
-        %remains<c> = 14 if @orig[2] < 2;
-        for 2 .. 5 -> $i {
-            my $p = @array[$i];
-            if !$p.defined {
-                ok $blanks-- > 0, 'blank added';
-            }
-            else {
-                my $v = %remains{ $p.key } :delete;
-                is $v, $p.value, 'got an expected value';
-            }
-        }
-
-        given @orig {
-            is @array[.[0]].key, 'a', 'array 0 key same';
-            is @array[.[0]].value, 1, 'array 0 value same';
-            if (.[1] >= 2) {
-                is @array[.[1]].key, 'b', 'array 1 key same';
-                is @array[.[1]].value, $b, 'array 1 value same';
-            }
-            else {
-                is @array[.[1]], Pair, 'array 1 nullified';
-            }
-            if (.[2] >= 2) {
-                is @array[.[2]].key, 'c', 'array 2 key same';
-                is @array[.[2]].value, 3, 'array 2 value same';
-            }
-            else {
-                is @array[.[2]], Pair, 'array 2 nullified';
-            }
-        }
+        is @array[0].key, 'a', 'array 0 key same';
+        is @array[0].value, 1, 'array 0 value same';
+        ok @array[1] ~~ Pair:U, 'array 1 key same';
+        is @array[2].key, 'd', 'array 0 key is d';
+        is @array[2].value, 11, 'array 0 value is 11';
+        is @array[3].key, 'e', 'array 1 key is e';
+        is @array[3].value, 12, 'array 1 value is 12';
+        is @array[4].key, 'b', 'array 4 key is b';
+        is @array[4].value, 13, 'array 4 value is 13';
+        ok @array[5] ~~ Pair:U, 'array 5 is nullified';
+        is @array[6].key, 'c', 'array 6 key same';
+        is @array[6].value, 3, 'array 6 value same';
     },
     '23-splice-replace' => {
         @array.splice: 1, 1, 'd' => 11, 'e', 12, 'b' => 13, 'c', 14;
 
-        my @orig = (.[0], .[1], .[2]).map({
-            when * == 1 { Nil }
-            when * >= 2 { $_ + 3 }
-            default     { $_ }
-        });
-
-        given @orig[0] {
-            when ! .defined { ok %hash<a> :!exists, 'hash a deleted' }
-            default         { is %hash<a>, 1, 'hash a same' }
-        }
-        given @orig[1] {
-            when ! .defined { is %hash<b>, 13, 'hash b changed' }
-            when * >= 2     { is %hash<b>, $b, 'hash b same' }
-            default         { is %hash<b>, 13, 'hash b changed' }
-        }
-        given @orig[2] {
-            when ! .defined { is %hash<c>, 14, 'hash c changed' }
-            when * >= 2     { is %hash<c>, 3, 'hash c same' }
-            default         { is %hash<c>, 14, 'hash c changed' }
-        }
+        is %hash<a>, 1, 'hash a same';
+        is %hash<b>, 13, 'hash b changed';
+        is %hash<c>, 3, 'hash c same';
         is %hash<d>, 11, 'hash d added';
         is %hash<e>, 12, 'hash e added';
 
-        my $blanks = 1;
-        my %remains = d => 11, e => 12;
-        %remains<b> = 13 if !@orig[1].defined || @orig[1] < 2;
-        %remains<c> = 14 if !@orig[2].defined || @orig[2] < 2;
-        for 1 .. 4 -> $i {
-            my $p = @array[$i];
-            if !$p.defined {
-                ok $blanks-- > 0, 'blank added';
-            }
-            else {
-                my $v = %remains{ $p.key } :delete;
-                is $v, $p.value, 'got an expected value';
-            }
-        }
-
-        given @orig {
-            if .[0].defined {
-                is @array[.[0]].key, 'a', 'array 0 key same';
-                is @array[.[0]].value, 1, 'array 0 value same';
-            }
-            if .[1].defined {
-                if .[1] == 0 {
-                    is @array[.[1]], Pair, 'array 1 nullified';
-                }
-                else {
-                    is @array[.[1]].key, 'b', 'array 1 key same';
-                    is @array[.[1]].value, $b, 'array 1 value same';
-                }
-            }
-            if .[2].defined {
-                is @array[.[2]].key, 'c', 'array 2 key same';
-                is @array[.[2]].value, 3, 'array 2 value same';
-            }
-        }
-
+        is @array[0].key, 'a', 'array 0 key same';
+        is @array[0].value, 1, 'array 0 value same';
+        is @array[1].key, 'd', 'array 0 key is d';
+        is @array[1].value, 11, 'array 0 value is 11';
+        is @array[2].key, 'e', 'array 1 key is e';
+        is @array[2].value, 12, 'array 1 value is 12';
+        is @array[3].key, 'b', 'array 4 key is b';
+        is @array[3].value, 13, 'array 4 value is 13';
+        ok @array[4] ~~ Pair:U, 'array 5 is nullified';
+        is @array[5].key, 'c', 'array 6 key same';
+        is @array[5].value, 3, 'array 6 value same';
     },
     '24-splice-delete' => {
         @array.splice: 1, 1;
 
-        my @orig = (.[0], .[1], .[2]).map({
-            when 0 { 0 }
-            when 1 { Nil }
-            when 2 { 1 }
-        });
+        is %hash<a>, 1, 'hash a same';
+        ok %hash<b>:!exists, 'hash b deleted';
+        is %hash<c>, 3, 'hash c same';
 
-        given @orig {
-            if ! .[0].defined { ok %hash<a> :!exists, 'hash a deleted' }
-            else {
-                is %hash<a>, 1, 'hash a is same';
-                is @array[.[0]].key, 'a', 'array 0 key same';
-                is @array[.[0]].value, 1, 'array 0 value same';
-            }
-
-            if ! .[1].defined { ok %hash<b> :!exists, 'hash b deleted' }
-            else {
-                is %hash<b>, $b, 'hash b is same';
-                is @array[.[1]].key, 'b', 'array 1 key same';
-                is @array[.[1]].value, $b, 'array 1 value same';
-            }
-
-            if ! .[2].defined { ok %hash<c> :!exists, 'hash c deleted' }
-            else {
-                is %hash<c>, 3, 'hash c is same';
-                is @array[.[2]].key, 'c', 'array 2 key same';
-                is @array[.[2]].value, 3, 'array 2 value same';
-            }
-        }
+        is @array[0].key, 'a', 'array 0 key same';
+        is @array[0].value, 1, 'array 0 value same';
+        is @array[1].key, 'c', 'array 1 key moved up';
+        is @array[1].value, 3, 'array 1 value moved up';
     },
     '25-clone' => {
         my @clone-array := @array.clone;
@@ -444,9 +323,10 @@ diag("TEST_RAND_SEED = $rand-seed");
 for %tests.sort.pick(*) -> (:key($desc), :value(&test)) {
     subtest {
         for %inits.sort -> (:key($init-desc), :value(&init)) {
+            $b = 42;
             diag "init: $init-desc, test: $desc";
-            my $o = init();
-            subtest { temp $_ = $o; test() }, $init-desc;
+            init();
+            subtest { test() }, $init-desc;
         }
     }, $desc;
 }
